sjsonnet/test/resources/new_test_suite/error.import_json_lone_low_surrogate.jsonnet.golden
sjsonnet.ParseError: Expected "\"":1:16, found "\\uDC00afte"
    at [<root>].(error.import_json_lone_low_surrogate.jsonnet:1:1)
